fix: #1 The change the ddl-auto to update.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.username=demo
 spring.datasource.password=demo
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 
 #kafka 
 # Producer properties
